Fix text align in result entries

--- a/client/src/assets/SearchResultEntry.css
+++ b/client/src/assets/SearchResultEntry.css
@@ -97,21 +97,13 @@
 .Book-Name-Text {
     /* Name */
 
-    width: 200px;
-    height: 50px;
-
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
-    line-height: 25px;
-    display: flex;
-    align-items: center;
     text-align: center;
 
     color: #000000;
-
-
     /* Inside auto layout */
     flex: none;
     order: 0;
